deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: e-commerce
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: cloudsql-sa
      containers:
      - name: backend
        image: europe-west3-docker.pkg.dev/e-commerce-life-2/backend-repo/backend:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - name: cloud-storage-credentials
          mountPath: /var/secrets/google
          readOnly: true
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.28.0
        command:
        - "/cloud_sql_proxy"
        - "-instances=e-commerce-life-2:europe-west3:e-commerce-sql-server=tcp:1433"
      volumes:
      - name: cloud-storage-credentials
        secret:
          secretName: cloud-storage-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: e-commerce
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: e-commerce
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
